# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-consistent-hash"
version = "1.0.0"
description = "A consistent hash implementation in python"
readme = "README.md"
authors = [{ name = "Gaurav Tiwari", email = "gtinside@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hash", "consistent hash"]
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/gtinside/consistent-hashing"

[tool.bumpver]
current_version = "2024.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

