# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "py-consistent-hash"
version = "1.0.1"
description = "A consistent hash implementation in python"
readme = "README.md"
authors = [{ name = "Gaurav Tiwari", email = "gtinside@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hash", "consistent hash"]
dependencies = []
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/gtinside/consistent-hashing"
